src/style.css
/* ... */
.icon12 {
  background-image: url('data:image/svg+xml;utf8, <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="none"><path d="M0 4v9h15.15V4zm1 1h13.15v7H1z" fill="%23a4a59e"/><path d="M3.56 5.65v2h1v-.279a1.5 1.5 0 11-2.27 1.904l-.923.395A2.5 2.5 0 006.074 8.5a2.5 2.5 0 00-.824-1.85h.31v-1z" fill="%23e54a16"/></svg>');
}

.icon13 {
  background-image: url('data:image/svg+xml;utf8, <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="none"><path d="M0 4v9h15.15V4zm1 1h13.15v7H1z" fill="%23a4a59e"/><path d="M9.075 6v5h4.075V6zm1 1h2.076v3h-2.076z" fill="%2342a5f5"/><path d="M3.56 5.65v2h1v-.279a1.5 1.5 0 11-2.27 1.904l-.923.395A2.5 2.5 0 006.074 8.5a2.5 2.5 0 00-.824-1.85h.31v-1z" fill="%23e54a16"/></svg>');
}

.icon14 {
  background-image: url('data:image/svg+xml;utf8, <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="none"><path d="M7.074 4.5v8h1v-8z" fill="%23e54a16"/><path d="M0 4v9h15.15V4zm1 1h13.15v7H1z" fill="%23a4a59e"/><path d="M3.56 5.65v2h1v-.279a1.5 1.5 0 11-2.27 1.904l-.923.395A2.5 2.5 0 006.074 8.5a2.5 2.5 0 00-.824-1.85h.31v-1z" fill="%23e54a16"/></svg>');
}

.icon15 {
  background-image: url('data:image/svg+xml;utf8, <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="none"><path d="M7.074 4.5v8h1v-8z" fill="%23e54a16"/><path d="M0 4v9h15.15V4zm1 1h13.15v7H1z" fill="%23a4a59e"/><path d="M9.075 6v5h4.075V6zm1 1h2.076v3h-2.076z" fill="%2342a5f5"/><path d="M3.56 5.65v2h1v-.279a1.5 1.5 0 11-2.27 1.904l-.923.395A2.5 2.5 0 006.074 8.5a2.5 2.5 0 00-.824-1.85h.31v-1z" fill="%23e54a16"/></svg>');
}

body {
  margin: 0;
  display: flex;
  flex-direction: column;
  height: 100vh;
}

#main-container {
  z-index: 0;
  margin: 0;
  display: flex;
  min-height: 0;
  flex-grow: 1;
  overflow: hidden;
  flex-direction: var(--main-direction);
  background-color: var(--background-color);
  color: var(--text-color);
  transition: var(--body-transition);
}

body.dragging-main {
  cursor: var(--main-resizer-cursor) !important;
}

body.dragging-secondary {
  cursor: var(--secondary-resizer-cursor) !important;
}

body.dragging-cross {
  cursor: move !important;
}

#outline-pane {
  position: relative;
  white-space: nowrap;
  padding-top: 6px;
  overflow-x: hidden;
  overflow-y: auto;
  font-family: sans-serif;
  user-select: none;
}

#spacer {
  position: relative;
}

#collapse-all-btn {
  display: var(--collapse-all-btn-display);
  position: fixed;
  z-index: 100;
  opacity: 0;
  transition: opacity 0.2s ease;
  pointer-events: none;
}

#outline-pane:hover #collapse-all-btn {
  opacity: 1;
  pointer-events: auto;
}

#headline-input {
  position: absolute;
  z-index: 10;
  font-size: inherit;
  font-family: inherit;
  padding: 2px 0 2px 0px;
  margin: 0;
  border: none;
  outline: none;
  background-color: transparent;
  color: var(--input-color, #000);
  display: var(--headline-input-display);
}

#menu-icon {
  font-size: 27px;
}

.outline-icon {
  display: inline-flex;
  align-items: center;
  justify-content: center;
  cursor: pointer;
  width: 16px;
  height: 16px;
}

.outline-icon:hover svg {
  transform: scale(1.1);
  transition: transform 0.1s ease;
}

#main-resizer {
  position: relative;
  width: var(--main-resizer-width);
  height: var(--main-resizer-height);
  cursor: var(--main-resizer-cursor);
  background-color: var(--resizer-color);
  flex-shrink: 0;
}

#main-resizer::before,
#main-resizer::after {
  content: "";
  position: absolute;
  height: var(--main-resizer-extension-height);
  width: var(--main-resizer-extension-width);
  cursor: var(--main-resizer-cursor);
}

#main-resizer::before {
  top: var(--main-resizer-before-top);
  left: var(--main-resizer-before-left);
}

#main-resizer::after {
  right: var(--main-resizer-after-right);
  bottom: var(--main-resizer-after-bottom);
}

#outline-find-container {
  display: flex;
  flex-direction: var(--secondary-direction);
  height: var(--secondary-height);
  overflow: hidden;
}

#secondary-resizer {
  position: relative;
  height: var(--secondary-resizer-height);
  width: var(--secondary-resizer-width);
  cursor: var(--secondary-resizer-cursor);
  background-color: var(--resizer-color);
  flex-shrink: 0;
}

#secondary-resizer::before,
#secondary-resizer::after {
  content: "";
  position: absolute;
  width: var(--secondary-resizer-extension-width);
  height: var(--secondary-resizer-extension-height);
  cursor: var(--secondary-resizer-cursor);
}

#secondary-resizer::before {
  top: var(--secondary-resizer-before-top);
  left: var(--secondary-resizer-before-left);
}

#secondary-resizer::after {
  bottom: var(--secondary-resizer-after-bottom);
  right: var(--secondary-resizer-after-right);
}

#cross-resizer {
  position: absolute;
  top: 200px;
  left: 200px;
  width: var(--cross-resizer-size);
  height: var(--cross-resizer-size);
  cursor: move;
  background-color: transparent;
  flex-shrink: 0;
}

#cross-resizer::after {
  content: "";
  position: absolute;
  top: -5px;
  left: -5px;
  width: 15px;
  height: 15px;
  cursor: move;
}

#outline-pane,
#log-pane {
  flex: 1 1 0;
}

#body-pane {
  flex: 1;
  padding: 0.5rem 0 0 0.5rem;
  min-height: 0;
  background-color: var(--body-pane-color);
  overflow-y: auto;
  font-family:
    "Consolas", "Monaco", "Lucida Console", "DejaVu Sans Mono",
    "Liberation Mono", monospace;
  white-space: var(--body-pane-wrap);
  transition: var(--body-pane-transition);
}

#body-pane a {
  color: var(--body-link-color);
}

#outline-pane:focus,
#body-pane:focus,
#outline-pane:focus-visible,
#body-pane:focus-visible {
  /* 
    Note: Outline will appear under the items positioned absolutely.
    See pseudo-elements with "z-index: -1" that appear below this outline.
  */
  outline: 3px solid var(--focus-outline);
  outline-offset: -3px;
}
/* ... */

